src/main/openshift/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  namespace: serverless-demo
  name: feedback-persistence
spec:
  selector:
    app: feedback-persistence
  replicas: 1
  template:
    metadata:
      labels:
        app: feedback-persistence
    spec:
      containers:
        - name: feedback-persistence
          image: >-
            image-registry.openshift-image-registry.svc:5000/serverless-demo/feedback-persistence:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: Rolling
    rollingParams:
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
  triggers:
    - type: ConfigChange
