src/main/openshift/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: feedback-persistence
  namespace: deep-dive-kafka
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "1"
        autoscaling.knative.dev/max-scale: "5"
    spec:
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/deep-dive-kafka/feedback-persistence:latest
          env:
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: user
                  name: mariadb-config
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: userPassword
                  name: mariadb-config
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: host
                  name: mariadb-config
            - name: DB_DATABASE
              valueFrom:
                secretKeyRef:
                  key: database
                  name: mariadb-config
