src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: feedback-persistence
  namespace: deep-dive-quarkus
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: feedback-persistence.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: feedback-persistence
  tls:
    termination: "edge"
